fixed icons overflow

--- a/src/App.css
+++ b/src/App.css
@@ -65,8 +65,15 @@ div {
   align-items: center;
 }
 
-.icons button {
+.icons {
+  display: flex;
   margin-left: 0.4rem;
+  justify-content: center;
+  gap: 0.2rem;
+  align-items: center;
+}
+
+.icons button {
   background: none;
 }
 
